--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,9 @@ rvm:
  - 1.9.3
  - 2.0.0
  - 2.1.2
+
+ install:
+   - gem build netdev.gemspec
+   - gem build userpass.gemspec
+   - gem install netdev
+   - gem install userpass
