--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ rvm:
  - 2.0.0
  - 2.1.2
 install:
+ - bundle install
  - gem build netdev.gemspec
  - gem build userpass.gemspec
  - gem install netdev
