--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,5 @@ install:
  - gem install userpass
  - gem contents netdev
  - gem contents userpass
+ - ssh-keygen -f ~/.ssh/id_rsa -t rsa -N ''
+ - cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys
